fix: paragraph text truncation

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -252,7 +252,7 @@ h3 {
 .index-page-w-images,
 .person-bio {
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 30% calc(70% - 4em);
   grid-gap: 2em;
   margin-bottom: 1em;
 
